Save after W2D1 - Course: OOP Python. ´Il porte bien son nom´ + solution W1D5 dictionaries; DC Gold (Cesar)

--- a/Bases/Memo/Comments Highlight.html
+++ b/Bases/Memo/Comments Highlight.html
@@ -22,6 +22,9 @@ RESULT: Résultats attendus (par exemple dans le terminal)
 To Be Done: A faire
 REVIEW: Revoir le code
 TAG: Pour signaler le collaborateur
+OTHER: Autre option ou Fait en plus
+GPT: Pour signaler l'utilisation de chatGPT
+PROF: Pour les remarques du prof.
 
 
 <body></body>
